--- a/style.css
+++ b/style.css
@@ -274,6 +274,20 @@ article.active {
   z-index: -1;
 }
 
+/* Add any specific styles for thank-you page */
+.thank-you {
+  padding: 20px;
+  text-align: center;
+}
+
+.thank-you .article-title {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.thank-you-text p {
+  font-size: 16px;
+}
 
 
 
